css/style.css
/* *{
    border: solid 1px red;
} */
html{scroll-behavior: smooth;}

body{
    display: flex;
    flex-direction: column;
    background-color: #040d15;
    color: #e8f0fb;
    font-family: 'Arial', 'Helvetica', sans-serif;
    width: 80vw;
    padding: 0;
    margin: auto;
    overflow-x:hidden;
    min-width: 480px;
    gap: 60px;
}
h1{ font-size: 5rem;}
h3{ font-size: 3rem;}
p{font-size: 1.6rem; text-wrap: balance;}
.btn{
    font-size: 1.2rem;
    padding: 12px 24px;
    border-radius: 6px;
    border: #271993 solid 1px;
    
}
.btn.blue{
    color: #e8f0fb;
    background-color: #271993;
    box-shadow: #271993;
}
.btn.outline{
    background-color: #6942df;
    color: #e8f0fb;
    border: 1px solid #e8f0fb;
}
.btn.blue:hover{box-shadow: #27199380 0px 4px 12px; transform: scale(1.05); transition: ease-in 0.2s;}
.btn.outline:hover{background-color: #e8f0fb;color: #6942df;transform: scale(1.05); transition: 0.2s ease-in;}


    .nav{
        display: flex;
        flex-direction: row;
        color: #e8f0fb;
        flex: 1;
        flex-wrap: wrap;
        padding: 12px;
        justify-content: space-between;
        align-items: center;
    }

        .nav a{
            text-decoration: none;
            color: #e8f0fb;

        }

        .nav .logo{
            font-size: 2rem;
            font-weight: 600;

        }
        .rightLinks{
            display: flex;
            flex-direction: row;
            flex: 1;
            font-size: 1.2rem;
            justify-content: right;
            gap:12px;
            list-style: none;
            flex-wrap: wrap;
        }
            .rightLinks a{
                display: flex;
                flex: 0;
            }
    section{
        display: flex;
        flex: 1;
        padding: 12px;
    }
    section#hero{
        flex-direction: row;
        flex-wrap: wrap-reverse;
        align-items: center;
        gap: 36px;
    }
        .about{
            display: flex;
            flex-direction: column;
            flex: 1;
            justify-content: space-around;
            gap: 32px;
        }
            .about h1, .about p{
                padding: 0;
                margin: 0;
            }
            
        .abtImg{
            display: flex;
            flex-direction: column;
            flex: 0 1 600px;
            background-color: #271993;
            border-radius: 12px;
            overflow: hidden;
            border: #271993 solid 3px;
            justify-content: center;
            align-items: center;
        }
        .abtImg img{width:100%; aspect-ratio: 1/1;border-radius: 12px;}
        .abtImg div{padding: 3px;}
    section#features{
        flex-direction: column;
        flex: 1;
        justify-content: space-between;
        align-items: center;
        padding: 150px 12px;
        background-color: #6942df;
        border-radius: 12px;
    }
        .ftBox{
            display: flex;
            flex-direction: row;
            flex: 1 0 auto;
            flex-wrap: wrap;
            justify-content: center;
            gap: 36px;
        }
            .card{
                display: flex;
                flex-direction: column;
                flex: 0 1 250px;
                align-items: center;
                padding: 24px;
                font-size: 1.6rem;
                border: #271993 solid 1px;
                border-radius: 12px;
                gap: 36px;
            }
            .card:hover{
            box-shadow: #27199380 0px 13px 27px -5px,#27199380 0px 8px 16px -8px;
            transition: 0.2s ease-in;

            }
            .card .icon{
                display: flex;
                flex: 0 0 auto;
                font-size: 6rem;
                margin: 0;
                padding: 12px;
            }
            .card .ftext{
                display: flex;
                flex: 0;
                text-align: center;
            }
    section#review{
        flex-direction: column;
        flex: 1;
        justify-content: center;
        align-items: center;
        gap: 12px;
    }
        .reviewBox{
            display: flex;
            flex-direction: column;
            flex: 1;
            border: #271993 solid 1px;
            border-radius: 12px;
            padding: 24px;
        }
        .stars{
            font-size: 3rem;
            margin: 0;
            padding: 0;
            color: #6942df;
        }
    
    footer{
        display: flex;
        flex: 1;
        flex-direction: column;
        flex: 1;
        justify-content: space-between;
        align-items: center;
        padding: 48px 12px;
        padding-bottom: 24px;
        background-color: #6942df;
        border-radius: 12px 12px 0 0;
        gap: 48px;

    }
        footer .signUp{
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            width: 100% - 12px;
            border: 1px solid #e8f0fb;
            border-radius:12px;
            gap: 32px;
            padding: 12px;
        }

        .signLeft{
            display: flex;
            flex-direction: column;
            flex: 3 1 800px;
            margin: 12px;
            justify-content: start;
        }
        .signRight{
            display: flex;
            flex: 2 1 auto;
            margin: auto 12px;
            justify-content: start;
        }

        footer .copyright{
            display: flex;
            flex: 1;
            width: 100%;
            justify-content: center;
            align-items: center;
            border-radius: 12px;
            opacity: 0.6;
            background-color: #271993;
        }

